--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,9 +8,11 @@ name = "primitives"
 crate-type = ["cdylib"]
 
 [dependencies.pyo3]
-version = "0.12.1"
+version = "0.11.1"
 features = ["extension-module"]
 
 [dependencies]
 rand = "0.7.3"
 rayon = "1.4.0"
+numpy = "0.11.0"
+
