--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,3 +31,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Check formatting with black
+        run: |
+          black --check
