--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,4 +33,4 @@ jobs:
         pytest
     - name: Check formatting with black
       run: |
-        black --check
+        black --check differential_privacy
