format files and add check to tests

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,4 +33,4 @@ jobs:
         pytest
     - name: Check formatting with black
       run: |
-        black --check differential_privacy
+        black --check differential_privacy tests
