added rug log rounding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ pyo3 = { version = "0.11.1", features = ["extension-module"] }
 rand = "0.7.3"
 rayon = "1.4.1"
 numpy = "0.11.0"
-
+rug = "1.11.0"
